--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,27 +1,3 @@
-*{
-    padding: 0;
-    margin: 0;
-}
-header{
-    text-align: center;
-    img{
-        width: 300px;
-        height: 100%;
-        text-align: center;
-    }
-    ul{
-        justify-content: center;
-        font-size: 14px;
-        font-weight: 700;
-        a{
-            color: black;
-        }
-        a:hover{
-            color: grey;
-        }
-    } 
-}
-
 main{
     background-color: white;
     video{
@@ -71,55 +47,17 @@ main{
     }
 }
 
-.grilla-footer{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    text-align: center;
-    border-top: 1px solid grey;
-    footer{
-        background-color: white;
-        display: block;
-    }
-    .navbar{
-        flex-direction: column;
-        margin: 0;
-        padding: 0;
-        width: 100px;
-        display: inline-block;
-        grid-column: 1/2;
-        text-align: left;
-        .p-footer{
-            margin: 0;
-        }
-        .navbar-nav{
-            border-top: 1px solid grey;
-            a{
-                color: black;
-            }
-            a:hover{
-                color: grey;
-            }
-        }
-    }    
-    .logo-footer{
-        width: 160px;
-        height: 70px;
-        grid-column: 2/3;
-    }
-    i{
-        font-size: 40px;
-        grid-column: 2/3;
-        margin-top: 10px;
-        color: black;
-    }
-}
-
 /* INDUMENTARIA */
 
+.features{
+    height: 210px;
+    width: auto;
+    padding: 1%;
+    border-radius: 6px;
+}
 main{
     .titulos-indumentaria{
-        font-weight: 700;
+        @include font(14px,700);
         border-bottom: 1px solid rgb(179, 179, 179);
         text-align: center;
     }
@@ -127,10 +65,7 @@ main{
         .row{
             justify-content: center;
             .img-buzo{
-                height: 210px;
-                width: auto;
-                padding: 1%;
-                border-radius: 6px;
+                @extend .features;
             }
         }
     }
@@ -138,10 +73,7 @@ main{
         .row{
             justify-content: center;
             .img-remeras{
-                height: 210px;
-                width: auto;
-                padding: 1%;
-                border-radius: 6px;
+                @extend .features;
             }
         }
     }
@@ -150,10 +82,7 @@ main{
         .row{
             justify-content: center;
             .img-camperas{
-                height: 210px;
-                width: auto;
-                padding: 1%;
-                border-radius: 6px;
+                @extend .features;
             }
         }
     }
@@ -173,6 +102,8 @@ main{
         color: black;
     }
 }
+
+/* MEDIA QUERYS */
 
 @media only screen and (min-width:425px){
     main{
